--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -30,6 +30,7 @@ member.accountExpired.label=\u8D26\u6237\u662F\u5426\u8FC7\u671F
 member.accountLocked.label=\u8D26\u6237\u662F\u5426\u9501\u5B9A
 member.passwordExpired.label=\u5BC6\u7801\u662F\u5426\u8FC7\u671F
 member.realName.label=\u771F\u5B9E\u59D3\u540D
+member.roles.label=角色
 
 roles.label=\u89D2\u8272
 roles.name.label=\u89D2\u8272\u540D\u79F0
